UtahLiveDataTest/src/objects/Program__c.object
<CustomObject>
    <description>[Business] Programs are announced by the Agencies to publish the Announcements against which applications can be submitted to apply for Grants</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>An abbreviation of the program name.</description>
        <label>Abbreviation</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountIdentification__c</fullName>
        <label>Account Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Division of the organization to which the User Belongs</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>PointOfContact__r.Street + PointOfContact__r.City +  PointOfContact__r.State + 
PointOfContact__r.Country</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdministrationAcronym__c</fullName>
        <formula>Account__r.Parent.Abbreviation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administration Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdministrationFormula__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration__c</fullName>
        <label>Administration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeIncomeType__c</fullName>
        <label>Alternative Income Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deductive</fullName>
                </value>
                <value>
                    <fullName>Additive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AmendedStatus__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Active&apos;)</formula>
        <label>Amended Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appeals__c</fullName>
        <label>Appeals</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicantEligibility__c</fullName>
        <label>Applicant Eligibility</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicantTypes__c</fullName>
        <inlineHelpText>Refers Custom Setting Picklist to get values</inlineHelpText>
        <label>Applicant Type(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadline__c</fullName>
        <label>Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationProcedures__c</fullName>
        <label>Application Procedures</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicationSetting__c</fullName>
        <label>Application Setting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgramPathway__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Required &amp; Budget Based</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppropriationLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appropriation Lookup</label>
        <referenceTo>r_appr__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appropriation__c</fullName>
        <label>Appropriation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PQH</fullName>
                </value>
                <value>
                    <fullName>PQI</fullName>
                </value>
                <value>
                    <fullName>PUG</fullName>
                </value>
                <value>
                    <fullName>PQN</fullName>
                </value>
                <value>
                    <fullName>PQO</fullName>
                </value>
                <value>
                    <fullName>PQP</fullName>
                </value>
                <value>
                    <fullName>PQS</fullName>
                </value>
                <value>
                    <fullName>PQT</fullName>
                </value>
                <value>
                    <fullName>PUD</fullName>
                </value>
                <value>
                    <fullName>PUA</fullName>
                </value>
                <value>
                    <fullName>PUM</fullName>
                </value>
                <value>
                    <fullName>PUP</fullName>
                </value>
                <value>
                    <fullName>PUQ</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
                <value>
                    <fullName>PRB</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>PPB</fullName>
                </value>
                <value>
                    <fullName>PAG</fullName>
                </value>
                <value>
                    <fullName>PQM</fullName>
                </value>
                <value>
                    <fullName>PUF</fullName>
                </value>
                <value>
                    <fullName>PQG</fullName>
                </value>
                <value>
                    <fullName>PQU</fullName>
                </value>
                <value>
                    <fullName>PQV</fullName>
                </value>
                <value>
                    <fullName>PQX</fullName>
                </value>
                <value>
                    <fullName>PUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttachmentsRequired__c</fullName>
        <inlineHelpText>Please enter list of required attachments separated by semicolons; include &apos;optional&apos; with the file type if it is not mandatory.</inlineHelpText>
        <label>AttachmentsRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audits__c</fullName>
        <label>Audits</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AwardActivityType__c</fullName>
        <label>Award Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Demonstration</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Fellowship/Scholarship</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Conferences</fullName>
                </value>
                <value>
                    <fullName>Scientific/Health Research</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Social Science Research</fullName>
                </value>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>KDA (Knowledge/Development/Application)</fullName>
                </value>
                <value>
                    <fullName>Training/Traineeship</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Temporary Assistance for Needy Families (TANF)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardApprovalEmailTemplate__c</fullName>
        <inlineHelpText>Name of template which will be used while sending Approval mail.</inlineHelpText>
        <label>Award  Approval Email  Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardLetterRequired__c</fullName>
        <description>If yes, award letter will be sent generated and sent out when the award is activated</description>
        <label>AwardLetterRequired</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardProcedure__c</fullName>
        <label>Award Procedure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AwardType__c</fullName>
        <description>Defines the type of award mandated by congressional intent.</description>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No values defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardingAgencyCode__c</fullName>
        <formula>Account__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarding Agency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardingAgencyLink__c</fullName>
        <formula>HYPERLINK((&apos;apex/OrganizationTreeView?rt=External&apos;), Account__r.Name, &apos;_self&apos;)</formula>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardingAgencyText__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BeneficiaryEligibility__c</fullName>
        <label>Beneficiary Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BudgetingPreference__c</fullName>
        <label>Budgeting Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Period Grouped by Project/Service Area</fullName>
                    <default>true</default>
                    <label>Budget Period Grouped by Project/Service Area</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BuildupFunctionalityNeeded__c</fullName>
        <description>This value decides whether to use build up functionality in budget grid for specific program in Award.</description>
        <label>Build-up Functionality Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFDA_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CFDA Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClonedCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cloned Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClonedFrom__c</fullName>
        <label>Cloned From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseoutEmailTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Email Template</label>
        <referenceTo>GNT__EmailTemplateConfig__c</referenceTo>
        <relationshipLabel>Programs (Closeout Email Template)</relationshipLabel>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CooperativeAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A cooperative agreement is an award of financial assistance where ‘substantial involvement’ is anticipated between the awarding agency and the recipient during performance of the project or activity. For Cooperative Agreements, this should be set to 1, indicating true.</description>
        <label>Cooperative Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether cost sharing is required or not. If CostSharing is required, then the Federal to Non-Federal ratio must match the ratio specified in the Cost Sharing Ratio column. If CostSharing is required and the cost sharing ratio is not specified then the Non-Federal share should be greater than 0. Additionally the Total Budget concept is applicable, which means that the IDC on the NGA will be reported as Other in the DC. This rule is enforced in the applications as well as award module.</description>
        <label>Cost Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CredentialsDocumentation__c</fullName>
        <label>Credentials/Documentation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CriteriaforSelectingProposals__c</fullName>
        <label>Criteria For Selecting Proposals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deadlines__c</fullName>
        <label>Deadlines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisableRiskBtn__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Closed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Risk Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <formula>OR((TEXT( Status__c) = &apos;Active&apos;), 
(TEXT( Status__c) = &apos;Closed&apos;),(TEXT( Status__c) = &apos;Disapproved&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplaySubmitForApprovalButton__c</fullName>
        <formula>OR((TEXT( Status__c) = &apos;Active&apos;),
(TEXT( Status__c) = &apos;Submitted for Approval&apos;),
(TEXT( Status__c) = &apos;Approved&apos;),
(TEXT( Status__c) = &apos;Closed&apos;),(TEXT( Status__c) = &apos;Disapproved&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls the display of the Submit for Approval Button. If the Program Status is &apos;In Progress&apos; or &apos;Change Requested&apos; and User Type is &apos;Standard&apos; display the Submit for Approval Button</inlineHelpText>
        <label>DisplaySubmitForApprovalButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistrictCode__c</fullName>
        <formula>If(!Account__r.CharterFlag__c,&apos;00DISTRICT&apos;,&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division with in the Granting Agency to which the user might belong</description>
        <label>Division</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Division)</relationshipLabel>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EligibleApplicantTypes__c</fullName>
        <label>Eligible Applicant Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County governments</fullName>
                </value>
                <value>
                    <fullName>State governments</fullName>
                </value>
                <value>
                    <fullName>City or township governments</fullName>
                </value>
                <value>
                    <fullName>Special district governments</fullName>
                </value>
                <value>
                    <fullName>School Districts</fullName>
                </value>
                <value>
                    <fullName>Private Schools</fullName>
                </value>
                <value>
                    <fullName>Charter Schools</fullName>
                </value>
                <value>
                    <fullName>State institutions for higher education</fullName>
                </value>
                <value>
                    <fullName>Private institutions of higher education</fullName>
                </value>
                <value>
                    <fullName>Public housing authorities</fullName>
                </value>
                <value>
                    <fullName>Nonprofits having a 501 (C)(3)</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Victim Services</fullName>
                </value>
                <value>
                    <fullName>Tribal Entity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                    <isActive>false</isActive>
                    <label>Charter</label>
                </value>
                <value>
                    <fullName>Charter School</fullName>
                    <isActive>false</isActive>
                    <label>Charter School</label>
                </value>
                <value>
                    <fullName>Country governments</fullName>
                    <isActive>false</isActive>
                    <label>Country governments</label>
                </value>
                <value>
                    <fullName>Independent school districts</fullName>
                    <isActive>false</isActive>
                    <label>Independent school districts</label>
                </value>
                <value>
                    <fullName>Indian Tribe</fullName>
                    <isActive>false</isActive>
                    <label>Indian Tribe</label>
                </value>
                <value>
                    <fullName>Non LEA</fullName>
                    <isActive>false</isActive>
                    <label>Non LEA</label>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                    <isActive>false</isActive>
                    <label>Non Profit</label>
                </value>
                <value>
                    <fullName>Non Profit Victim Services</fullName>
                    <isActive>false</isActive>
                    <label>Non Profit Victim Services</label>
                </value>
                <value>
                    <fullName>Private School</fullName>
                    <isActive>false</isActive>
                    <label>Private School</label>
                </value>
                <value>
                    <fullName>Traditional School District</fullName>
                    <isActive>false</isActive>
                    <label>Traditional School District</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Template Config</label>
        <referenceTo>GNT__EmailTemplateConfig__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>HYPERLINK(&apos;mailto:&apos;+PointOfContact__r.Email,PointOfContact__r.Email)</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End date of the program, to determine if it is a single or a multi year program</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExecutiveApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpandedAuthority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether a program allows expanded authority to the recipients.</description>
        <label>Expanded Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedFunding__c</fullName>
        <label>Expected Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINETProgramCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Code Lookup</label>
        <referenceTo>FINETProgramCode__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalAwardDate__c</fullName>
        <label>Federal Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FederalAwardingAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FederalAwardingAgency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Account)</relationshipLabel>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalOldKey__c</fullName>
        <label>Federal Old Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalProgramCFDA__c</fullName>
        <label>CFDA Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalProgramTitle__c</fullName>
        <label>Program Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalURL__c</fullName>
        <label>Federal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieldHistoryEntityName__c</fullName>
        <description>This field will show Entity Name in Field level history.</description>
        <formula>&apos;Program&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show Entity Name in Field level history.</inlineHelpText>
        <label>Field History Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used in the USBE award letter for getting the financial contact details.</description>
        <label>Financial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Financial Contact)</relationshipLabel>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForDemo__c</fullName>
        <formula>False</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForDemo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormulaandMatchingRequirements__c</fullName>
        <label>Formula And Matching Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FundLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund Lookup</label>
        <referenceTo>r_fund__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2480</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundedAmount__c</fullName>
        <label>Funded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FunderType__c</fullName>
        <label>Funder Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>NGO</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingAccountsneeded__c</fullName>
        <description>Budgeting is done at the funding account level</description>
        <label>Funding Accounts needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingMethod__c</fullName>
        <description>Method for determining the amount of funding for a grantee. The allowable values follow. Formula - A legislatively defined calculation for distributing funds across grantees. Non-formula - An agency negotiated amount. Blended - This funding method has elements of both Formula and Non-formula.</description>
        <inlineHelpText>Formula - A legislatively defined calculation for distributing funds across grantees. 
Non-formula - An agency negotiated amount. 
Blended - This funding method has elements of both Formula and Non-formula.</inlineHelpText>
        <label>Funding Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Non-formula</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantsManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HeadquartersOffice__c</fullName>
        <label>Headquarters Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HidUovcFields__c</fullName>
        <formula>IF(Account__r.Name == &apos;USBE&apos;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidUovcFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAddBtn__c</fullName>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;), (TEXT(Status__c) != &apos;Being Amended&apos;), (TEXT(Status__c) != &apos;Change Requested&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAddBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteBtn__c</fullName>
        <formula>(ISPICKVAL(Status__c,&apos;Active&apos;)||ISPICKVAL(Status__c,&apos;Disapproved&apos;)) || $Profile.Name == &apos;CTR&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteButton__c</fullName>
        <description>Logic for Hiding Delete Button</description>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Delete Button</inlineHelpText>
        <label>Hide Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDeleteBtn__c</fullName>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;), (TEXT(Status__c) != &apos;Being Amended&apos;),(TEXT(Status__c) != &apos;Change Requested&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Delete Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>((ISPICKVAL(Status__c,&apos;Active&apos;)||ISPICKVAL(Status__c,&apos;Disapproved&apos;))  &amp;&amp; ($Profile.Name != &apos;System Administrator&apos;))</formula>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGoals__c</fullName>
        <formula>ISPICKVAL(  IsGoalsRequired__c , &apos;No&apos;)</formula>
        <label>HideGoals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfActive__c</fullName>
        <description>Hide if Program status = Active</description>
        <formula>OR(IF(TEXT(Status__c) = &quot;Active&quot;, TRUE, FALSE),IF(TEXT(Status__c) = &quot;Submitted for Approval&quot;, TRUE, FALSE),IF(TEXT(Status__c) = &quot;Approved&quot;, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInitiate__c</fullName>
        <formula>NOT(ISPICKVAL(ProgramPaymentBatchStatus__c,&apos;Initiate&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideInitiate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideKPI__c</fullName>
        <formula>ISPICKVAL(KPIsRequired__c,&apos;No&apos;)</formula>
        <label>HideKPI</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>